[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/energy/love.png" type="Texture" id=1]
[ext_resource path="res://items/Energy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/pickup_item.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.8392
height = 13.8736

[node name="EnergyItem" type="RigidBody2D"]
collision_layer = 256
collision_mask = 0
gravity_scale = -1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Tween1" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.56807 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LabelPoints" type="Label" parent="."]
margin_left = 35.8672
margin_top = -54.7447
margin_right = 75.8672
margin_bottom = -40.7447
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween1" to="." method="_on_tween_all_completed"]
